# e-commerce-rdms

./: .dockerignore  .gitignore  .renderignore  Dockerfile  README.md  db_manager.ipynb  doc.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  start.sh
data/: app_user.csv  bid.csv  customer.csv  customer_review.csv  customer_service.csv  data.ipynb  department.csv  export_distribution.csv  import_distribution.csv  order_header.csv  order_history.csv  payment.csv  product.csv  seller.csv  seller_review.csv  seller_service.csv  shipping.csv  staff.csv
data_val_sql_files/: orders_without_payment.sql  price_val.sql
diagrams/: core_flow.md  detailed_core_flow.md  simple_overview_mermaid.md
docker/: Dockerfile  README.md  docker-compose.yml
render/: DOCKER_DEPLOY.md
result/: chat_test.md  data_validation_report.txt  report.md  sql_query_result.csv
result/chroma_db/: chroma.sqlite3
script/: __init__.py  ai_sql.py  api.py  api_server.py  data_val.py  langsmith_config.py  query_runner.py  sql_via_python.py  test.ipynb
script/chatbot/: README.md  customer_chatbot.py  generate_chatbot_diagram.py  kb.json  tools.py
script/ml/: churn_pred.py
script/rag/: embedding.py
script/sql_generator/: README.md  __init__.py  ai_helpers.py  ai_sql.py  generate_sql_diagram.py  graph.py  query_runner.py  (+1 more)
scripts/: create_eval_excel.py  load_csv_to_db.py
sql/: 0.tables.sql  1.revenue_analysis.sql  2.customer_analysis.sql  3.product_analysis.sql  4.operation_analysis.sql  5.data_quality.sql  README.md  biz_questions.md
static/: index.html
(+3 files in other folders)
